--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/personajes">Personajes</a>
+          <a class="nav-link active" aria-current="page" routerLink="/characters">Characters</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/lugares">Lugares</a>
+          <a class="nav-link active" aria-current="page" routerLink="/locations">Locations</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/episodios">Episodios</a>
+          <a class="nav-link active" aria-current="page" routerLink="/episodes">Episode</a>
         </li>
       </ul>
       <!-- <form class="d-flex">
