--- a/src/app/pages/characters/characters.component.html
+++ b/src/app/pages/characters/characters.component.html
@@ -1,26 +1,40 @@
-<div class="text-right">
+<div class="d-flex justify-content-between mt-5">
   <div></div>
-  <nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item">
-        <a class="page-link" href="#" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-        </a>
-      </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item">
-        <a class="page-link" href="#" aria-label="Next">
-          <span aria-hidden="true">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+  <div>
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link" (click)="updateIndexCharacterTable(1)" aria-label="Previous">
+            <span aria-hidden="true">First</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" (click)="updateIndexCharacterTable(page-1)" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <ng-container *ngFor="let pageNumber of navigatorOptions">
+          <li class="page-item">
+            <a class="page-link" [class.page-link-selected]="pageNumber == page" (click)="updateIndexCharacterTable(pageNumber)">{{ pageNumber }}</a>
+          </li>
+        </ng-container>
+        <li class="page-item">
+          <a class="page-link" (click)="updateIndexCharacterTable(page+1)" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" (click)="updateIndexCharacterTable(pageMaxLimit)" aria-label="Next">
+            <span aria-hidden="true">Last</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </div>
 
-<table class="table"><CAPTION></CAPTION>
-  <thead>
+<table class="table table-hover"><CAPTION></CAPTION>
+  <thead class="table-dark">
     <tr>
       <th scope="col">#</th>
       <th scope="col">Image</th>
@@ -29,8 +43,8 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let character of charactersList; index as i">
-      <th scope="row">{{ i+1 }}</th>
+    <tr *ngFor="let character of charactersList" (click)="showCharacterDetails(character.id)" class="rowToSelect">
+      <th scope="row" class="align-middle">{{ character.id }}</th>
       <td>
         <img [src]="character.image" class="img-thumbnail custom-thumbnail" [alt]="character.name">
       </td>
@@ -40,20 +54,37 @@
   </tbody>
 </table>
 
-<nav aria-label="Page navigation example">
-  <ul class="pagination">
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-      </a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-      </a>
-    </li>
-  </ul>
-</nav>
+<div class="d-flex justify-content-between mt-5">
+  <div></div>
+  <div>
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link" (click)="updateIndexCharacterTable(1)" aria-label="Previous">
+            <span aria-hidden="true">First</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" (click)="updateIndexCharacterTable(page-1)" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <ng-container *ngFor="let pageNumber of navigatorOptions">
+          <li class="page-item">
+            <a class="page-link" [class.page-link-selected]="pageNumber == page" (click)="updateIndexCharacterTable(pageNumber)">{{ pageNumber }}</a>
+          </li>
+        </ng-container>
+        <li class="page-item">
+          <a class="page-link" (click)="updateIndexCharacterTable(page+1)" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" (click)="updateIndexCharacterTable(pageMaxLimit)" aria-label="Next">
+            <span aria-hidden="true">Last</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</div>
