--- a/src/app/pages/characters/characters.component.html
+++ b/src/app/pages/characters/characters.component.html
@@ -88,3 +88,8 @@
     </nav>
   </div>
 </div>
+
+<ngx-loading
+  [show]="showLoader"
+  [config]="{ backdropBorderRadius: '10px' }"
+></ngx-loading>
