--- a/src/app/pages/characters/characters.component.html
+++ b/src/app/pages/characters/characters.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between mt-5">
+<div class="d-flex justify-content-between">
   <div></div>
   <div>
     <nav aria-label="Page navigation example">
