--- a/src/app/pages/characters/characters.component.css
+++ b/src/app/pages/characters/characters.component.css
@@ -4,8 +4,14 @@
 .rowToSelect {
     cursor: pointer
 }
+.dropdownOption {
+    cursor: pointer
+}
 .page-link {
     cursor: pointer
+}
+.page-link:hover {
+    background-color: #ced4da;
 }
 .page-link-selected {
     background-color: #0d6efd;
