Episodes list and details

--- a/src/app/pages/characters/characters.component.html
+++ b/src/app/pages/characters/characters.component.html
@@ -72,6 +72,10 @@
   </tbody>
 </table>
 
+<div *ngIf="charactersList.length == 0" class="text-center">
+  <h1>Data not found!</h1>
+</div>
+
 <div class="d-flex justify-content-between mt-5">
   <div></div>
   <div>
