location list and details

--- a/src/app/pages/character-details/character-details.component.html
+++ b/src/app/pages/character-details/character-details.component.html
@@ -11,11 +11,11 @@
     </div>
     <div class="col-sm-12 col-md-6 text-center">
       <ul class="list-group list-group-flush">
-        <li class="list-group-item"><span class="cardTitle">status:</span> {{ characterData.status }}</li>
-        <li class="list-group-item"><span class="cardTitle">gender:</span> {{ characterData.gender }}</li>
-        <li class="list-group-item"><span class="cardTitle">species:</span> {{ characterData.species }}</li>
-        <li class="list-group-item"><span class="cardTitle">location:</span> {{ characterData.location.name }}</li>
-        <li class="list-group-item"><span class="cardTitle">origin:</span> {{ characterData.origin.name }}</li>
+        <li class="list-group-item"><span class="cardTitle">Status:</span> {{ characterData.status }}</li>
+        <li class="list-group-item"><span class="cardTitle">Gender:</span> {{ characterData.gender }}</li>
+        <li class="list-group-item"><span class="cardTitle">Species:</span> {{ characterData.species }}</li>
+        <li class="list-group-item"><span class="cardTitle">Location:</span> {{ characterData.location.name }}</li>
+        <li class="list-group-item"><span class="cardTitle">Origin:</span> {{ characterData.origin.name }}</li>
         <li class="list-group-item"><span class="cardTitle" *ngIf="characterData.type">type:</span> {{ characterData.type }}</li>
       </ul>
     </div>
