--- a/src/app/pages/location-details/location-details.component.html
+++ b/src/app/pages/location-details/location-details.component.html
@@ -15,7 +15,7 @@
 <div class="card mb-5" *ngIf="dataLoaded">
   <div class="card-body text-center">
     <h5 class="card-title">Residents ({{ locationData.residents.length }})</h5>
-    <p class="card-text"></p>
+    <p class="card-text">List of character who have been last seen in the location.</p>
   </div>
   <div class="row align-items-center">
     <div class="col-sm-12 col-md-6 col-lg-4 text-center" *ngFor="let resident of locationData.residents">
